@@ -1,3 +1,8 @@
+2008-04-03  Marius Vollmer  <marius.vollmer@nokia.com>
+
+	* src/operations.cc (ip_install_with_info): Only show packages
+	that are not installed at all for a restore operation (N83477).
+
 2008-04-02  Marius Vollmer  <marius.vollmer@nokia.com>
 
 	* src/util.h, src/util.cc (set_entertainment_main_title): Added
